--- a/statistics/bootstap/example.ipynb
+++ b/statistics/bootstap/example.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# импортируем библиотеки\n",
     "import numpy as np\n",
-    "from bootstrap_CI import bootstrap_samples, confident_interval\n",
+    "from bootstrap_CI import bootstrap_samples, confidence_interval\n",
     "\n",
     "# фиксируем seed \n",
     "np.random.seed(42)\n",
@@ -50,9 +50,9 @@
     "# создаем доверительные интервалы \n",
     "\n",
     "# мат ожидание\n",
-    "mean_interval = confident_interval(stats_mean, 0.05)\n",
+    "mean_interval = confidence_interval(stats_mean, 0.05)\n",
     "# дисперсия\n",
-    "var_interval = confident_interval(stats_var, 0.05)\n",
+    "var_interval = confidence_interval(stats_var, 0.05)\n",
     "\n",
     "# выводим интервалы\n",
     "print(f'Доверительный интервал для мат ожидания: {mean_interval}')\n",
